--- a/Web3NDetective/NDetective/NDetective.csproj
+++ b/Web3NDetective/NDetective/NDetective.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Etherscan.Net" Version="1.5.0" />
+    <PackageReference Include="Nethereum.Web3" Version="4.12.0" />
+  </ItemGroup>
+
 </Project>
